# ansible-workstation

./: .ansible-lint  .envrc  .envrc.private.sample  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .tool-versions  .yamllint  Dockerfile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: galaxy.yml  test.yml
defaults/: main.yml
defaults/main/: asdf.yml  docker.yml  dotfiles.yml  github.yml  helm-plugins.yml  krew-plugins.yml  language-managers.yml  locales.yml  proxy.yml  tools-aws.yml  tools-hashicorp.yml  tools-kubernetes.yml  tools-others.yml  tools.yml
meta/: main.yml  requirements.yml
molecule/: requirements.txt
molecule/default/: Dockerfile.j2  converge.yml  create.yml  molecule.yml  verify.yml
molecule/proxy/: molecule.yml  playbook.yml
molecule/vagrant/: converge.yml  molecule.yml
tasks/: _download.yml  asdf.yml  dotfiles.yml  helm-plugins.yml  krew-plugins.yml  language-managers.yml  local_packages.yml  main.yml  proxy_configure.yml  system_packages.yml  system_packages_archlinux.yml  system_packages_debian.yml  system_packages_redhat.yml  tools.yml
tests/: test.yml
vars/: archlinux.yml  debian-10.yml  debian.yml  redhat.yml  ubuntu-20.04.yml  ubuntu.yml
